feat: upgrade cluster and reset node endpoint
